# linux-audio-player

./: CMakeLists.txt  README.md
.github/workflow/: action.yml
.github/workflows/: action.yml
doc/: REPORT.md  doc.md  ffmpeg.md  report.md
include/controller/: controller.h
include/decoder/: decoder.h
include/player/: player.h
src/: CMakeLists.txt  main.cpp
src/controller/: controller.cpp
src/decoder/: decoder.cpp
src/player/: player.cpp
